--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.13.3
-scipy==1.0.0
-midiutil==1.1.3
-matplotlib==2.1.1
-soundfile==0.9.0.post1
-librosa==0.5.1
-h5py==2.7.1
+numpy==1.16.2
+scipy==1.2.1
+midiutil==1.2.1
+matplotlib==3.0.3
+soundfile==0.10.1
+librosa==0.6.3
+h5py==2.9.0
